Added dropdownlist functionality to dashboard.cshtml

--- a/FirstIteration/bin/FirstIteration.dll.config
+++ b/FirstIteration/bin/FirstIteration.dll.config
@@ -10,9 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FirstIteration-20161010045400.mdf;Initial Catalog=aspnet-FirstIteration-20161010045400;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TranscendenceEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Transcendence.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="TranscendenceEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Transcendence.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="TranscendenceEntities2" connectionString="metadata=res://*/Models.Model2.csdl|res://*/Models.Model2.ssdl|res://*/Models.Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Transcendence.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="transcendenceEntities" connectionString="metadata=res://*/Models.AzureDB.csdl|res://*/Models.AzureDB.ssdl|res://*/Models.AzureDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=transcendence.database.windows.net;initial catalog=transcendence;persist security info=True;user id=Transcendence;password=Karthik2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
