--- a/FirstIteration/FirstIteration.csproj
+++ b/FirstIteration/FirstIteration.csproj
@@ -241,6 +241,9 @@
       <DependentUpon>AzureDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FundingSourceServices.cs" />
+    <Compile Include="Services\LineChartServices.cs" />
+    <Compile Include="Services\StaffListServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
