--- a/FirstIteration/FirstIteration.csproj
+++ b/FirstIteration/FirstIteration.csproj
@@ -241,9 +241,11 @@
       <DependentUpon>AzureDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BarChartServices.cs" />
     <Compile Include="Services\DepartmentServices.cs" />
     <Compile Include="Services\FundingSourceServices.cs" />
     <Compile Include="Services\LineChartServices.cs" />
+    <Compile Include="Services\PieChartServices.cs" />
     <Compile Include="Services\StaffListServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -292,6 +294,7 @@
     </Content>
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="Scripts\BarCharts.js" />
     <Content Include="Scripts\bootstrap-checkbox-radio-switch.js" />
     <Content Include="Scripts\bootstrap-notify.js" />
     <Content Include="Scripts\bootstrap-select.js" />
@@ -313,7 +316,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\chartist.min.js" />
     <Content Include="Scripts\demo.js" />
-    <Content Include="Scripts\DashboardCharts.js" />
+    <Content Include="Scripts\LineCharts.js" />
     <Content Include="Scripts\highcharts.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -326,6 +329,7 @@
     <Content Include="Scripts\light-bootstrap-dashboard.js" />
     <Content Include="Scripts\LoadLists.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\PieCharts.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\DropDownLists.js" />
