--- a/FirstIteration/FirstIteration.csproj
+++ b/FirstIteration/FirstIteration.csproj
@@ -243,7 +243,7 @@
       <DependentUpon>AzureDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BarChartServices.cs" />
+    <Compile Include="Services\BarAndLineServices.cs" />
     <Compile Include="Services\DropDownServices.cs" />
     <Compile Include="Services\FundingSourceServices.cs" />
     <Compile Include="Services\LineChartServices.cs" />
